Some wrapping fixes for group headers

--- a/css/characters.css
+++ b/css/characters.css
@@ -374,12 +374,20 @@ table.properties th {
 }
 
 .characterGroupHeader {
+    display: flex;
     margin: 1em 0em;
     width: 100%;
     padding: 8px;
     font-size: 2em;
     border: 2px solid var(--group-header-border-color);
-    color: var(--group-header-color);;
+    color: var(--group-header-color);
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+}
+
+.characterGroupHeader div {
+    white-space: nowrap;
 }
 
 .characterGroupHeader.dark {
@@ -387,7 +395,8 @@ table.properties th {
 }
 
 .characterGroupHeader.media {
-    text-align: center;
+    flex-direction: column;
+    align-content: center;
     font-size: 3em;
 }
 
